# Indurstry-Level-Fault-Prediction-AI-agent

./: .env.example  .gitignore  current_errors.md  docker-compose.yml  tasks_status.md
.kiro/specs/ai-incident-response-commander/: .config.kiro  design.md  requirements.md  tasks.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: alert_agent.py  base.py  log_analysis_agent.py  postmortem_agent.py  rca_agent.py  remediation_agent.py  retrieval_agent.py
backend/app/api/: middleware.py
backend/app/api/routes/: incidents.py  ingest.py  recommendations.py  reports.py
backend/app/core/: config.py  database.py  errors.py  logging.py  security.py
backend/app/evaluation/: ragas_evaluator.py
backend/app/llm/: provider.py
backend/app/mcp/: __init__.py  clients.py  registry.py
backend/app/models/: __init__.py  agent_output.py  investigation.py  postmortem.py  ragas_metrics.py
backend/app/orchestrator/: graph.py  state.py
backend/app/rag/: embedder.py  ingestion.py  qdrant_client.py  retrieval.py
backend/app/schemas/: __init__.py  agent_outputs.py  incident.py  responses.py
backend/tests/api/: test_routes.py  test_routes_prop.py
backend/tests/integration/: test_agent_timeout.py  test_rag_integration.py  test_storage_failure.py
backend/tests/unit/agents/: test_agents_prop.py  test_alert_agent.py  test_base.py  test_log_analysis_agent.py  test_postmortem_agent.py  test_rca_agent.py  test_remediation_agent.py
backend/tests/unit/core/: test_config_logging_middleware.py  test_security.py
backend/tests/unit/evaluation/: test_evaluation.py
backend/tests/unit/llm/: test_llm_prop.py
backend/tests/unit/mcp/: test_mcp_prop.py
backend/tests/unit/orchestrator/: test_graph.py  test_orchestrator_prop.py
backend/tests/unit/rag/: test_rag_prop.py
backend/tests/unit/schemas/: test_schemas_prop.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/submit/: page.tsx
frontend/components/: components.test.tsx
frontend/lib/: api.ts  polling.test.ts  polling.ts
frontend/tests/: property.test.tsx
frontend/types/: api.ts
(+14 files in other folders)
