[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-incident-response-commander"
version = "0.1.0"
description = "AI-powered multi-agent platform for autonomous production incident investigation"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # --- Web framework ---
    "fastapi[standard]==0.115.5",
    "uvicorn[standard]==0.32.1",

    # --- Database / async ORM ---
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",

    # --- Configuration ---
    "pydantic-settings==2.6.1",

    # --- Logging ---
    "structlog==24.4.0",

    # --- LangChain / LLM providers ---
    "langchain==0.3.8",
    "langchain-google-genai==2.0.5",
    "langchain-openai==0.2.9",
    "langchain-anthropic==0.3.0",

    # --- Orchestration ---
    "langgraph==0.2.52",

    # --- Vector store ---
    "qdrant-client==1.12.1",

    # --- Embeddings & reranking ---
    # sentence-transformers provides both the embedding model (all-MiniLM-L6-v2)
    # and the cross-encoder reranker (cross-encoder/ms-marco-MiniLM-L-6-v2)
    "sentence-transformers==3.3.1",

    # --- RAG evaluation ---
    "ragas==0.2.6",

    # --- Observability / tracing ---
    "langsmith==0.1.147",

    # --- Document ingestion ---
    "pymupdf==1.24.13",
    "unstructured[pdf]==0.16.11",

    # --- MCP Python SDK ---
    "mcp==1.1.2",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
    "anyio==4.7.0",
    "hypothesis==6.119.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
